--- a/settings.gradle
+++ b/settings.gradle
@@ -152,7 +152,7 @@ else
     // A list of directory names that correspond to modules to be excluded from configuration.
     // Items may be individual module names (e.g. 'luminex') or module container names (e.g. 'customModules')
     // You must make sure to pass this list to the appropriate calls to `BuildUtils.includeModules`
-    List<String> excludedModules = []
+    List<String> excludedModules = ['fileTransfer',  'MacCossLabModules']
 
     // The line below recursively includes all modules in server/modules 
     BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR], excludedModules, true)
@@ -176,6 +176,7 @@ else
 
     // The line below is an example of how to include a single module
     //include ":server:modules:workflow"
+    include ":server:modules:MacCossLabModules:panoramapublic"
 }
 
 if (hasProperty('extraIncludes'))
