Make example values comments, not actual properties

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -29,9 +29,9 @@ context.validationQuery[0]=SELECT 1
 
 #context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
-context.oldEncryptionKey=oldKey
-context.requiredModules=rM
-context.pipelineConfig=pC
+#context.oldEncryptionKey=
+#context.requiredModules=
+#context.pipelineConfig=/path/to/pipeline/config/dir
 #context.serverGUID=
 #context.workDirLocation=/path/to/desired/workDir
 
