--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -29,6 +29,9 @@ context.validationQuery[0]=SELECT 1
 
 #context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
+#context.oldEncryptionKey=
+#context.requiredModules=
+#context.pipelineConfig=/path/to/pipeline/config/dir
 #context.serverGUID=
 #context.workDirLocation=/path/to/desired/workDir
 
