--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ org.gradle.workers.max=3
 org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 # Uncomment to restrict the number of concurrent npm build tasks. Useful for systems with limited resources.
 #npmRunLimit=2
+#touch
 
 # Set the action to be performed when a version conflict between a dependency included from the build and one that already exists
 # is detected. Default behavior on detecting a conflict is to fail. Possible values are delete, fail, warn.
