--- a/gradle.properties
+++ b/gradle.properties
@@ -289,6 +289,7 @@ springBootTomcatVersion=9.0.82
 
 springVersion=5.3.30
 
+# Do not upgrade until BaseDaoImpl stops calling getGeneratedKeys()
 sqliteJdbcVersion=3.42.0.1
 
 # NLP and SAML bring stax2-api in as a transitive dependency but with very different versions. We force the later version.
