Downgrade sqlite-jdbc to 3.42.0.1 (#600)

--- a/gradle.properties
+++ b/gradle.properties
@@ -289,7 +289,8 @@ springBootTomcatVersion=9.0.82
 
 springVersion=5.3.30
 
-sqliteJdbcVersion=3.43.2.0
+# Do not upgrade until BaseDaoImpl stops calling getGeneratedKeys()
+sqliteJdbcVersion=3.42.0.1
 
 # NLP and SAML bring stax2-api in as a transitive dependency but with very different versions. We force the later version.
 stax2ApiVersion=4.2.1
