Replace deprecated buildDir with layout.buildDirectory

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -40,7 +40,7 @@ project.tasks.register("tomcatLibsZip", Zip) {
         zip.description = "produce jar file with jars to be deployed in \$CATALINA_HOME/lib"
         zip.from project.configurations.tomcatJars.getAsFileTree()
         zip.archiveBaseName.set("tomcat-libs")
-        zip.destinationDirectory = project.file(project.labkey.explodedModuleLibDir)
+        zip.destinationDirectory.set(project.file(project.labkey.explodedModuleLibDir))
 }
 
 configurations
@@ -210,8 +210,8 @@ tasks.register('createModule', CreateModule) {
 // Each project that requires node will have its own downloaded version of node and npm, but for the symlinkNode
 // task we need a single location, and one that works even when not building from source (Issue 35207)
 project.node {
-    workDir = project.file("${project.rootProject.buildDir}/.node")
-    npmWorkDir = project.file("${project.rootProject.buildDir}/.node")
-    yarnWorkDir = project.file("${project.rootProject.buildDir}/.node")
+    workDir = BuildUtils.getRootBuildDirFile(project, ".node")
+    npmWorkDir = BuildUtils.getRootBuildDirFile(project, ".node")
+    yarnWorkDir = BuildUtils.getRootBuildDirFile(project, ".node")
 }
 project.tasks.named('deployApp').configure { dependsOn(project.tasks.npmSetup) }
