Update calls to `includeModules` to pass through excludedModule paths

--- a/gradle/settings/distributions.gradle
+++ b/gradle/settings/distributions.gradle
@@ -44,4 +44,8 @@ import org.labkey.gradle.util.BuildUtils
 
 apply from: 'all.gradle'
 
-BuildUtils.includeModules(this.settings, rootDir, ["distributions"], [])
+List<String> excludedModules = []
+if (hasProperty('excludedModulePaths'))
+    excludedModules.addAll("${excludedModulePaths}".split(","))
+
+BuildUtils.includeModules(this.settings, rootDir, ["distributions"], excludedModules)
