--- a/gradle/settings/distributions.gradle
+++ b/gradle/settings/distributions.gradle
@@ -45,7 +45,7 @@ import org.labkey.gradle.util.BuildUtils
 apply from: 'all.gradle'
 
 List<String> excludedModules = []
-if (hasProperty('excludedModulePaths'))
-    excludedModules.addAll("${excludedModulePaths}".split(","))
+if (hasProperty('excludedModules'))
+    excludedModules.addAll("${excludedModules}".split(","))
 
 BuildUtils.includeModules(this.settings, rootDir, ["distributions"], excludedModules)
