--- a/build.gradle
+++ b/build.gradle
@@ -380,7 +380,7 @@ if (BuildUtils.shouldPublish(project) || BuildUtils.shouldPublishDistribution(pr
     artifactoryPublish.skip = true
 }
 
-project.log.info("##teamcity[setParameter name='labkey.version' value='${labkeyVersion}']")
+project.logger.info("##teamcity[setParameter name='labkey.version' value='${labkeyVersion}']")
 
 subprojects {
     project.tasks.register("showRepos", DefaultTask) {
