--- a/server/build.gradle
+++ b/server/build.gradle
@@ -4,7 +4,6 @@ import org.labkey.gradle.plugin.XsdDoc
 import org.labkey.gradle.task.CreateModule
 import org.labkey.gradle.util.BuildUtils
 import org.labkey.gradle.util.GroupNames
-import org.labkey.gradle.util.PomFileHelper
 
 plugins {
     id 'maven-publish'
@@ -205,6 +204,16 @@ tasks.register('createModule', CreateModule) {
             "in a comma delimited list to create those subdirectories in the new module. If none are required, still " +
             "include -PcreateFiles with no value to avoid being prompted."
 }
+
+project.tasks.register("reportVersionToTeamCity", DefaultTask) {
+    DefaultTask task ->
+        task.group = GroupNames.DOCUMENTATION
+        task.description = "Report version number '${labkeyVersion}' to TeamCity"
+        task.doLast({
+            project.logger.info("##teamcity[setParameter name='labkey.version' value='${labkeyVersion}']")
+        })
+}
+project.tasks.named('stageApp').configure { dependsOn(project.tasks.named('reportVersionToTeamCity')) }
 
 // We add this configuration here so we have a single location to link to for the npm and node executables.
 // Each project that requires node will have its own downloaded version of node and npm, but for the symlinkNode
