--- a/server/build.gradle
+++ b/server/build.gradle
@@ -4,6 +4,7 @@ import org.labkey.gradle.plugin.XsdDoc
 import org.labkey.gradle.task.CreateModule
 import org.labkey.gradle.util.BuildUtils
 import org.labkey.gradle.util.GroupNames
+import org.labkey.gradle.util.PomFileHelper
 
 plugins {
     id 'maven-publish'
