--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -71,3 +71,17 @@ spring.main.banner-mode=off
 #jsonaccesslog.pattern=%h %t %m %U %s %b %D %S "%{Referer}i" "%{User-Agent}i" %{LABKEY.username}s
 #jsonaccesslog.condition-if=attributeName
 #jsonaccesslog.condition-unless=attributeName
+
+# Uncomment below properties (csp.policy and csp.disposition) to enable Content Security Policy (CSP) headers
+# Do not copy-and-paste these examples for any production environment without understanding the meaning of each directive!
+
+# example usage 1 - very strict, disallows 'external' websites, disallows unsafe-inline, but only reports violations (does not enforce)
+# good for test automation!
+
+#csp.disposition=report
+#csp.policy="default-src 'self' https: ;\nconnect-src 'self' https: ;\nobject-src 'none' ;\nstyle-src 'self' https: 'unsafe-inline' ;\nimg-src 'self' data: ;\nscript-src 'unsafe-inline' 'unsafe-eval' 'strict-dynamic' 'nonce-${REQUEST.SCRIPT.NONCE}';\nbase-uri 'self' ;\nupgrade-insecure-requests ;\nframe-ancestors 'self' ;\nreport-to /labkey/admin-contentsecuritypolicyreport.api ;\nreport-uri /labkey/admin-contentsecuritypolicyreport.api ;"
+
+# example usage 2 - less strict but enforces directives, (NOTE: unsafe-inline is still required for many modules)
+
+#csp.disposition=enforce
+#csp.policy="default-src 'self' https: ;\nconnect-src 'self' https: ;\nobject-src 'none' ;\nstyle-src 'self' https: 'unsafe-inline' ;\nimg-src 'self' data: ;\nscript-src 'unsafe-inline' 'unsafe-eval' 'strict-dynamic' 'nonce-${REQUEST.SCRIPT.NONCE}';\nbase-uri 'self' ;\nupgrade-insecure-requests ;\nframe-ancestors 'self' ;\nreport-to /labkey/admin-contentsecuritypolicyreport.api ;\nreport-uri /labkey/admin-contentsecuritypolicyreport.api ;"
