Add task to report LabKey version to TeamCity (#625)

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -206,6 +206,21 @@ tasks.register('createModule', CreateModule) {
             "include -PcreateFiles with no value to avoid being prompted."
 }
 
+project.tasks.register("reportVersionToTeamCity", DefaultTask) {
+    DefaultTask task ->
+        task.group = GroupNames.PUBLISHING
+        task.description = "Report version number (${labkeyVersion}) to TeamCity"
+        task.doLast({
+            // https://www.jetbrains.com/help/teamcity/2018.1/build-script-interaction-with-teamcity.html#adding-or-changing-a-build-parameter
+            println "##teamcity[setParameter name='labkey.version' value='${labkeyVersion}']"
+        })
+}
+if (project.hasProperty("teamcity"))
+{
+    project.tasks.named('stageApp').configure { dependsOn(project.tasks.named('reportVersionToTeamCity')) }
+}
+
+
 // We add this configuration here so we have a single location to link to for the npm and node executables.
 // Each project that requires node will have its own downloaded version of node and npm, but for the symlinkNode
 // task we need a single location, and one that works even when not building from source (Issue 35207)
