--- a/gradle.properties
+++ b/gradle.properties
@@ -62,7 +62,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.31.9
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=1.44.0-ignoreApiDep-SNAPSHOT
+gradlePluginsVersion=1.44.0
 owaspDependencyCheckPluginVersion=8.4.3
 versioningPluginVersion=1.1.2
 
