--- a/gradle/settings/tomcat10.gradle
+++ b/gradle/settings/tomcat10.gradle
@@ -60,7 +60,7 @@ BuildUtils.includeModules(this.settings, rootDir, [
 //        "server/modules/adjudication",
         "server/modules/assayRequest",
 //        "server/modules/assayreport",
-//        "server/modules/biologics",
+        "server/modules/biologics",
         "server/modules/cas",
 //        "server/modules/cdisc_ODM",
 //        "server/modules/cds",
@@ -79,8 +79,8 @@ BuildUtils.includeModules(this.settings, rootDir, [
 //        "server/modules/fileTransfer",
 //        "server/modules/freezerpro",
 //        "server/modules/harvest",
-//        "server/modules/inventory",
-//        "server/modules/labbook",
+        "server/modules/inventory",
+        "server/modules/labbook",
         "server/modules/ldap",
         "server/modules/mfa",
 //        "server/modules/moduleEditor",
@@ -93,7 +93,7 @@ BuildUtils.includeModules(this.settings, rootDir, [
         "server/modules/premium",
 //        "server/modules/professional",
 //        "server/modules/provenance",
-//        "server/modules/puppeteer",
+        "server/modules/puppeteer",
 //        "server/modules/pushdownloads",
 //        "server/modules/reagent",
 //        "server/modules/recipe",
@@ -101,9 +101,9 @@ BuildUtils.includeModules(this.settings, rootDir, [
         "server/modules/redshift",
 //        "server/modules/rstudio",
         "server/modules/saml",
-//        "server/modules/sampleManagement",
+        "server/modules/sampleManagement",
 //        "server/modules/serviceTools",
-//        "server/modules/signing",
+        "server/modules/signing",
 //        "server/modules/snd",
 //        "server/modules/snprcEHRModules",
 //        "server/modules/targetedms",
