--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -61,7 +61,7 @@ context.encryptionKey=@@encryptionKey@@
 
 #context.oldEncryptionKey=
 #context.requiredModules=
-#context.pipelineConfig=/path/to/pipeline/config/dir
+context.pipelineConfig=./config
 #context.serverGUID=
 #context.bypass2FA=false
 #context.workDirLocation=/path/to/desired/workDir
